--- a/server/package.json
+++ b/server/package.json
@@ -9,6 +9,7 @@
   "author": "Francisco Roca",
   "license": "ISC",
   "dependencies": {
-    "express": "^4.17.1"
+    "express": "^4.17.1",
+    "mongoose": "^5.12.2"
   }
 }
